# minecraft-clone

./: .gitignore  CMakeLists.txt  README.md  package.json  server.js
public/: index.html
public/js/: game.js
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/engine/: camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/player/: player.cpp  player.h
src/utils/: noise.cpp  noise.h
src/world/: block.h  chunk.cpp  chunk.h  world.cpp  world.h
